# rts

./: .gitignore  CMakeLists.txt  ExternalGLEW.cmake  ExternalGLFW.cmake  ExternalGLM.cmake  ExternalGTest.cmake  LoadExternalProjects.cmake  README.md
cmake/: ExternalGLEW.cmake  ExternalGLFW.cmake  ExternalGLM.cmake  ExternalGTest.cmake  ExternalSTB.cmake  ExternalSpdlog.cmake  GLFWConfig.cmake  LoadExternalProjects.cmake
ecs/: CMakeLists.txt
ecs/include/ecs/: Component.h  Entity.h  EntityImpl.h  EntityManager.h  EntityManagerImpl.h  Storage.h  ecs.h
ecs/test/: EntityManagerTests.cpp
include/Components/: Frame.h  PositionTransform.h
include/STB/: stb_image.h
render/: CMakeLists.txt
render/include/render/: Batch2D.h  Texture2D.h  UniqueGL.h
render/src/: ShaderProgram.cpp  Texture2D.cpp  UniqueGL.cpp
rts/: CMakeLists.txt
rts/include/: Game.h  Grid.h  Mouse.h  ThreadPool.h  TimeTypes.h  input.h
rts/include/components/: Destination.h  PositionCurve.h  UnitComponents.h
rts/include/ecs/: Component.h  Constants.h  Entity.h  EntityImpl.h  EntityManager.h  EntityManagerImpl.h  TypeRegistry.h  ecs.h
rts/include/render/: ShaderProgram.h
rts/include/systems/: Movement.h  Selection.h  System.h
rts/include/utilities/: Timer.h  WrapMembers.h  utilities.h
rts/resources/shader/: Batch2D.frag  Batch2D.vert
rts/src/: Game.cpp  input.cpp  main.cpp
rts/src/render/: Batch2D.cpp  Texture2D.cpp
rts/src/systems/: Movement.cpp  Selection.cpp
rts/test/: EntityManagerTests.cpp
rts/utilities/include/: AnyIterator.h  ConcatIterables.h
src/: main.cpp
test/: EntityManagerTests.cpp  mathFunc.cpp
utilities/: CMakeLists.txt
utilities/include/utilities/: Timer.h  WrapMembers.h  utilities.h
utilities/src/: Timer.cpp  utilities.cpp
utilities/test/: WrapFunctions.cpp  test.cpp
